Cleanup DefaultTimestampProviderTest.
* Use Java 11 api
* Remove no longer used methods
* Remove workaround for pre 3.2.2 maven.

Change-Id: I22e025b0af6d35a74593485fa1168d3243235fec
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>